# libfortunata

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Manifest.toml  README.md
examples/: Manifest.toml
src/: lib.rs  main.rs
src/config/: mod.rs
src/file_sync/: mod.rs
src/manifest/: mod.rs
src/manifest/config/: mod.rs
src/manifest/manifest_spec/: fort_1_0.rs  mod.rs  tq.rs  tq_xml.rs  vg_1_0.rs
