[package]
name = "fortunata-rs"
version = "0.1.0"
authors = ["Carrie J V <carrie@carriejv.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "0.11.4", features = ["charset"] }
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
roxmltree = "0.9.1"
sha1 = "0.6.0"
md5 = "0.7.0"
sha2 = "0.8.1"
path_abs = "0.5.0"
futures = "0.3.4"
